# Robotics

./: README.md
ex01/: .bashrc  commands.txt  last_transform.txt  robot.urdf.xacro  robot_display.launch  transform.txt
ex01/service_full_name/: package.xml  setup.py
ex01/service_full_name/service_full_name/: client_name.py  service_name.py
ex01/service_full_name/srv/: SummFullName.srv
ex01/service_full_name_interfaces/: CMakeLists.txt  package.xml
ex02/: carrot.rviz  robot.urdf  robot_display.launch
ex02/action_turtle_command/: package.xml  setup.py
ex02/action_turtle_command/action_turtle_command/: action_turtle_client.py  action_turtle_server.py
ex02/action_turtle_command_interfaces/: CMakeLists.txt  package.xml
ex02/action_turtle_command_interfaces/action/: MessageTurtleCommands.action
ex02/learning_tf2_py/: package.xml  setup.py
ex03/: pose_speed_x1.yaml  pose_speed_x2.yaml  robot.gazebo.xacro  robot.urdf.xacro  robot_gazebo.launch
ex03/learning_tf2_py/: setup.py
ex03/turtle_cmd_vel/: metadata.yaml  turtle_cmd_vel_0.mcap
ex03/vadimandreich/: CMakeLists.txt  package.xml
ex03/vadimandreich/src/: my_node.cpp
ex04/: colcon_build.txt  doctor.txt
ex04/move_around/: package.xml  setup.cfg  setup.py
ex05/: rosnode_info.txt  rosnode_list.txt
ex05/move_to_goal/: package.xml  setup.py
ex05/pattern_movement/: package.xml  setup.cfg  setup.py
ex06/: cmd_vel.txt
ex08/: rqt_console.csv  three_turtles.py
ex09/full_name_pkg/: CMakeLists.txt  package.xml
ex10/: CMakeLists.txt  package.xml
ex10/src/: text_to_cmd.cpp  topic.cpp
(+15 files in other folders)
