<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_turtle_command</name>
  <version>0.0.0</version>
  <description>Package for controlling turtlesim via actions </description>
  <maintainer email="vadimperminov08@gmail.com">vadik</maintainer>
  <license>Apache Lisence 2.0</license>

  <depend>action_turtle_command_interfaces</depend>
  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
